--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,20 @@
     <properties>
         <qdm.grid.version>1.0.1-SNAPSHOT</qdm.grid.version>
     </properties>
+    
+    <build>
+         <plugins>
+                  <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-compiler-plugin</artifactId>
+                 <version>3.1</version>
+                 <configuration>
+                   <source>1.6</source>
+                   <target>1.6</target>
+                 </configuration>
+                  </plugin>
+         </plugins>
+    </build>
 
     <dependencies>
         <dependency>
